[package]
name = "chain-base-index"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"]}
tracing-appender = "0.2"
tracing-rolling = "0.1"
tracing-attributes = "0.1"
tracing-fmt = "0.1"

toml = "0.8"
serde = { version = "1.0", features = ["derive"] }

chrono = "0.4"
